plugins {
	id 'org.springframework.boot' version '2.1.3.RELEASE'
	id 'com.google.cloud.tools.jib' version '1.0.2'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'maven'

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.batch:spring-batch-integration'
	implementation 'org.springframework.cloud:spring-cloud-starter-task:2.1.1.RELEASE'
    implementation 'org.springframework.cloud:spring-cloud-task-dependencies:2.1.1.RELEASE'
	//implementation 'org.springframework.cloud:spring-cloud-deployer-local:2.0.0.RELEASE'
	implementation 'org.springframework.cloud:spring-cloud-deployer-kubernetes:2.0.0.RELEASE'
	compile 'io.minio:minio:6.0.4'
	runtimeOnly 'mysql:mysql-connector-java'
	runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
	testRuntimeOnly 'com.h2database:h2'
}

jib {
	from {
		image = 'openjdk:8u201-jre-alpine'
	}
	to {
		image = "registry.hub.docker.com/jsa4000/dataflow-${project.name}"
		credHelper = 'osxkeychain'
		tags = [version, 'latest']
	}
	container {
		jvmFlags = ['-XX:+UnlockExperimentalVMOptions',
					'-XX:+UseCGroupMemoryLimitForHeap',
					'-XX:+HeapDumpOnOutOfMemoryError',
					'-XX:MaxRAMFraction=2']
		useCurrentTimestamp = true
		labels = [ownerName: 'jsa4000',
				  projectName: project.name,
				  creationDate: System.nanoTime().toString()]
		//format = 'OCI'
	}
}
